src/objects/Education__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Education</relationshipLabel>
        <relationshipName>Education</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Major</label>
        <referenceTo>AreaOfStudy__c</referenceTo>
        <relationshipLabel>Education</relationshipLabel>
        <relationshipName>Education</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Education</relationshipLabel>
        <relationshipName>Education</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Education</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EDU-{00000000}</displayFormat>
        <label>Education ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education</pluralLabel>
    <recordTypes>
        <fullName>Associates</fullName>
        <active>true</active>
        <label>Associates</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bachelors</fullName>
        <active>true</active>
        <label>Bachelors</label>
    </recordTypes>
    <recordTypes>
        <fullName>Certification</fullName>
        <active>true</active>
        <label>Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Doctorates</fullName>
        <active>true</active>
        <label>Doctorates</label>
    </recordTypes>
    <recordTypes>
        <fullName>Masters</fullName>
        <active>true</active>
        <label>Masters</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>